force-app/main/default/objects/Badge_Data__c/Badge_Data__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center - It contains the information of submitting badge</description>
    <label>Badge Data</label>
    <nameField>
        <displayFormat>BD-{0000}</displayFormat>
        <label>Badge Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Badges Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>