force-app/main/default/objects/Badge_Data__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Keep the address of the customer applying for badge on customer portal.</description>
    <inlineHelpText>Keep the address of the customer applying for badge on customer portal.</inlineHelpText>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>