force-app/main/default/objects/Badge_Data__c/fields/Age_Bracket__c.field-meta.xml
<CustomField>
    <fullName>Age_Bracket__c</fullName>
    <description>Define the particular range of age range of customer on customer portal.</description>
    <inlineHelpText>Define the particular range of age range of customer on customer portal.</inlineHelpText>
    <label>Age Bracket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>18-20</fullName>
            </value>
            <value>
                <fullName>21-24</fullName>
            </value>
            <value>
                <fullName>25-34</fullName>
            </value>
            <value>
                <fullName>35-44</fullName>
            </value>
            <value>
                <fullName>45-54</fullName>
            </value>
            <value>
                <fullName>55-64</fullName>
            </value>
            <value>
                <fullName>65+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>