force-app/main/default/objects/Badge_Data__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Customer define the city in badges on customer portal.</description>
    <inlineHelpText>Customer define the city in badges on customer portal.</inlineHelpText>
    <label>City</label>
    <length>75</length>
    <type>Text</type>
</CustomField>