force-app/main/default/objects/Badge_Data__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Customer define the Country in badges on customer portal.</description>
    <inlineHelpText>Customer define the Country in badges on customer portal.</inlineHelpText>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>