force-app/main/default/objects/Badge_Data__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Customer define the Email in badges on customer portal.</description>
    <inlineHelpText>Customer define the Email in badges on customer portal.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>