force-app/main/default/objects/Badge_Data__c/fields/Exhibitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Name__c</fullName>
    <description>Customer provide his name in this field.</description>
    <inlineHelpText>Customer provide his name in this field.</inlineHelpText>
    <label>Company Name on Badge</label>
    <type>TextArea</type>
</CustomField>