force-app/main/default/objects/Badge_Data__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Customer provide his first name in badges.</description>
    <inlineHelpText>Customer provide his first name in badges.</inlineHelpText>
    <label>First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>