force-app/main/default/objects/Badge_Data__c/fields/Is_VIP__c.field-meta.xml
<CustomField>
    <fullName>Is_VIP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To Distinguish between VIP &amp; normal badges</description>
    <label>Is VIP</label>
    <type>Checkbox</type>
</CustomField>