force-app/main/default/objects/Badge_Data__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>Customer provides his Job Title in badges.</description>
    <inlineHelpText>Customer provides his Job Title in badges.</inlineHelpText>
    <label>Job Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>