force-app/main/default/objects/Badge_Data__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Customer provides his Last Name in badges.</description>
    <inlineHelpText>Customer provides his Last Name in badges.</inlineHelpText>
    <label>Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>