force-app/main/default/objects/Badge_Data__c/fields/MatchMaking__c.field-meta.xml
<CustomField>
    <fullName>MatchMaking__c</fullName>
    <description>Customer define the MatchMaking in badges on customer portal.</description>
    <inlineHelpText>Customer define the MatchMaking in badges on customer portal.</inlineHelpText>
    <label>MatchMaking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>