force-app/main/default/objects/Badge_Data__c/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <description>Customer provide his Mobile Number in badges.</description>
    <inlineHelpText>Please enter your full International Dialing Code. i.e International Dialing Code, Area Code and Telephone Number</inlineHelpText>
    <label>Mobile Number</label>
    <type>Phone</type>
</CustomField>