force-app/main/default/objects/Badge_Data__c/fields/Purchase_Data__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Data__c</fullName>
    <description>Badge related with PurchaseData object.</description>
    <inlineHelpText>Badge related with PurchaseData object.</inlineHelpText>
    <label>Purchase Data</label>
    <referenceTo>Purchase_Data__c</referenceTo>
    <relationshipLabel>Badges Data</relationshipLabel>
    <relationshipName>Badges_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>