force-app/main/default/objects/Badge_Data__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Customer provide his State in badges.</description>
    <inlineHelpText>Customer provide his State in badges.</inlineHelpText>
    <label>State</label>
    <length>75</length>
    <type>Text</type>
</CustomField>